# coditect-crawl

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: PROJECT-PLAN.md  web-crawler-tool-evaluation-2026-02-23.md
src/coditect_crawl/: __init__.py
src/coditect_crawl/extractors/: fallback.py  trafilatura.py
src/coditect_crawl/orchestrators/: domain_cooldown.py  retry_middleware.py  scrapy_spider.py  settings.py
src/coditect_crawl/renderers/: crawl4ai.py  playwright.py
src/coditect_crawl/utils/: models.py
